p2-container/Project_Containers/task5/Ingress_Azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wecloud-ingress

spec:
  ingressClassName: wecloud
  rules:
    #- host: "10.32.0.1"   #*.foo.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/profile"
        backend:
          service:
            name: spring-profile-service
            port:
              number: 80
              
  #- host: "35.227.97.151"   #*.foo.com"
  - http:
      paths:
      - pathType: Prefix
        path: "/login"
        backend:
          service:
            name: spring-login-service
            port:
              number: 80
